--- a/github_repo/accueil.css
+++ b/github_repo/accueil.css
@@ -249,42 +249,56 @@ button {
 /* From Uiverse.io by garerim */ 
 .container-input {
   display: flex;
-  justify-content: center; /* Centre tout le contenu */
   align-items: center;
-  width: 100%;
-  margin-top: 20px;
-  position: relative; 
-  
+  position: relative;
+  width: fit-content;
+  margin: auto;
 
+}
+
+.search-icon {
+  position: absolute;
+  left: 10px;
+  width: 20px; /* Augmenter la zone cliquable */
+  height: 30px;
+  background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="black" width="16px" height="16px" viewBox="0 0 1920 1920"><path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z"/></svg>') no-repeat center;
+  background-size: contain;
+  cursor: pointer;
+  z-index: 10; /* Assurer que c'est cliquable */
 }
 
 .input {
   width: 150px;
-    padding: 10px 0px 10px 40px;
-    border-radius: 9999px;
-    border: solid 1px #333;
-    transition: all .2s ease-in-out;
-    outline: none;
-    opacity: 0.8;
-    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="black" width="16px" height="16px" viewBox="0 0 1920 1920"><path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z"/></svg>') no-repeat 12px center;
-    background-size: 16px 16px;
-    background-color: white;
-  
+  padding: 10px 10px 10px 40px;
+  border-radius: 9999px;
+  border: solid 1px #333;
+  transition: width 0.3s ease-in-out;
+  outline: none;
+  opacity: 0.8;
 }
 
-.container-input svg {
-   position: right;
-    top: 50%;
-    left: 10px;
-    transform: translate(0, -50%);
-    position: absolute;
-    left: 40%;
-    transform: (-40%); /* Centre la loupe horizontalement */
-    top: 50%;
-    transform: translate(-50%, -50%);
-  
-  
+.search-button {
+  position: absolute;
+  left: 10px; /* Même position que la loupe */
+  top: 50%;
+  width: 20px;
+  height: 20px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background: black;
 }
+
+
+.container-input svg {
+  position: absolute;
+  left: 10px; /* Ajuste bien la position */
+  top: 50%;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  cursor: pointer; /* Rend la loupe cliquable */
+}
+
 
 .input:focus {
  width: 250px;
